Fixing alignment of forms on create game play from game page.

--- a/gamelog/static/css/main.css
+++ b/gamelog/static/css/main.css
@@ -120,6 +120,8 @@ main > nav {
 
 fieldset {
     margin-bottom: 2em;
+    margin-left: 0;
+    padding-left: 0;
 }
 
 form .actions {
